--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,18 @@
                   <a class="nav-link" href="pricing.html">Pricing</a>
                   <a class="nav-link" href="meet-our-founders.html">Meet Our Founders</a>
                 </div>
+                </div>
+              </div>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-outline-success" type="button">Login</button>
+                <a class="btn btn-success" role="button" href="registration-form.html">Register</a>
               </div>
             </div>
           </nav>
           
+         <div class="banner">
           <h1></h1>
+         </div>
 
     </body>
 </html>
