--- a/homepage.html
+++ b/homepage.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <title></title>
-<link rel="styleheet" href="homepage.css">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="styleheet" href="homepage.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Lancelot&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -23,15 +27,83 @@
                 </div>
               </div>
               <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button class="btn btn-outline-success" type="button">Login</button>
+                <a class="btn btn-outline-success" role="button" href="login-form.html">Login</a>
                 <a class="btn btn-success" role="button" href="registration-form.html">Register</a>
               </div>
             </div>
           </nav>
           
          <div class="banner">
-          <h1></h1>
+          <div class="text">
+            <div class="heading">
+          <h1><strong>Welcome to Dynamic Creators!</strong></h1>
+          </div>
+          <h5>Get affordable meals delivered to your home today!</h5><br>
+          <div class="sign-up-button">
+            <a class="btn btn-success" role="button" href="registration-form.html">Sign Up</a>
+          </div>
+          </div>
          </div>
+
+         <div class="offer">
+         <h1>We offer:</h1>
+         <div style="display: flex; justify-content: center;">
+<div class="line"></div><br>
+</div>
+         <div style="display: flex; justify-content: center; column-gap: 50px; align-items: center;">
+         <div class="section-one">
+          <img src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/43520/heavy-dollar-sign-emoji-clipart-md.png" style="width:300px;">
+          <p>Affordable meal plans for those in need of cheaper fresh food items.</p>
+         </div>
+         <div class="section-two">
+          <img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/017/394/original/fast-delivery_5756858.png?1640724659" style="width:300px;">
+          <p>Speedy 3-day delivery to guarantee freshly picked ingredients.</p>
+         </div>
+         <div class="section-three">
+          <img src="https://static.thenounproject.com/png/3203073-200.png">
+          <figcaption>Fresh, never frozen ingredients straight from the garden.</figcaption>
+         </div>
+</div>
+</div>
 
     </body>
 </html>
+
+<style>
+  .banner{
+    background-image: url(https://img.freepik.com/premium-photo/healthy-food-background-concept-healthy-food-fresh-vegetables-nuts-fruits-stone-background-top-view-copy-space_187166-21326.jpg?w=2000); 
+    height: 400px;
+    text-align: right;
+
+  }
+
+  .text{
+    padding-left: 720px;
+    padding-right: 10px;
+    padding-top: 10px;
+    color:#fbfbff;
+    
+  }
+
+  .heading{
+    color:#ff9a47;
+    font-size: larger;
+    font-family: 'Homemade Apple', cursive;
+  }
+
+body{
+  text-align: center;
+ background-color: #ff9a47;
+}
+
+.line {
+        height: 5px;
+        width: 350px;
+        background: black;
+        }
+
+.offer{
+  padding-left: 20px;
+  padding-right: 20px;
+}        
+</style>
