--- a/registration-form.html
+++ b/registration-form.html
@@ -2,6 +2,9 @@
 <html>
     <head>
 <title></title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="registration-form.css">
     </head>
     <body>
@@ -21,13 +24,13 @@
               <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
               <hr>
           
-              <p>By creating an account you agree to our <a href="#">Terms & Conditions</a>.</p>
-              <p>By creating an account you agree to our <a href="#">Privacy Policy</a>.</p>
+              <p>By creating an account you agree to our <a href="https://www.termsandcondiitionssample.com/live.php?token=nZvw1uxI4FHAp4MrU6Js5OO3qI2jkzz1" target="_blank">Terms & Conditions</a>.</p>
+              <p>By creating an account you agree to our <a href="https://www.privacypolicygenerator.info/live.php?token=voy4xoCC0qxBJgHdrcMDCT1PDQaX0SeA" target="_blank">Privacy Policy</a>.</p>
               <button type="submit" class="registerbtn">Register</button>
             </div>
           
             <div class="container signin">
-              <p>Already have an account? <a href="#">Sign in</a>.</p>
+              <p>Already have an account? <a href="login-form.html">Sign in</a>.</p>
             </div>
           </form>
     </body>
