--- a/meet-our-founders.html
+++ b/meet-our-founders.html
@@ -1,108 +1,129 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:rgb(39, 40, 56) ;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="homepage.html"><img src="company-logo.png" style="width:130px"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="homepage.html">Home</a>
-                  <a class="nav-link" href="about-us.html">About Us</a>
-                  <a class="nav-link" href="pricing.html">Pricing</a>
-                  <a class="nav-link active" href="meet-our-founders.html">Meet Our Founders</a>
-                </div>
-              </div>
-            </div>
-          </nav>
+<head>
+  <title></title>
 
-          <div class="header">
-          <h1>Meet Our Founders!</h1><br>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:rgb(39, 40, 56) ;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="homepage.html"><img src="company-logo.png" style="width:130px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" aria-current="page" href="homepage.html">Home</a>
+          <a class="nav-link" href="about-us.html">About Us</a>
+          <a class="nav-link" href="pricing.html">Pricing</a>
+          <a class="nav-link active" href="meet-our-founders.html">Meet Our Founders</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="header">
+    <h1>Meet Our Founders!</h1><br>
+  </div>
+  <div style="display: flex; justify-content: center;">
+    <div class="line"></div><br>
+  </div>
+
+  <div class="cards">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="aaliyah.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">This is Aaliyah</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
           </div>
-          <div style="display: flex; justify-content: center;">
-            <div class="line"></div><br>
-            </div>
-          
-          <div class="cards">
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="jasmeir.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">This is Jasmeir</h5>
+            <p class="card-text">She's 16 years old. She attends River Rouge High School and a part of the class of
+              2024.She's currently learning development technology such as HTML and CSS. A fun fact about Jasmier is
+              she's a cheerleader at River Rouge High School. </p>
           </div>
-</div>
-          
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="kylee.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">This is Kylee</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><br>
 
-    </body>
+  <div class="cards-two">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="lanihya.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">This is Lanihya</h5>
+            <p class="card-text">She grew up being taught to always help those who are less fortunate. She's known to
+              put others before herself and she's always uplifting both her friends and family. Fun Fact about Lanihya
+              is that she fed the homeless on Thanksgiving in 2019.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</body>
+
 </html>
 
 <style>
-body{
-  background-color: #FF9A47;
-  text-align: center;
-}
+  body {
+    background-color: #FF9A47;
+    text-align: center;
+  }
 
-.cards{
-  padding-left: 40px;
-  padding-right: 40px;
-padding-top: 20px;
-}
+  .cards {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 20px;
+  }
 
-.line {
-        height: 5px;
-        width: 450px;
-        background: black;
-        }
+  .line {
+    height: 5px;
+    width: 450px;
+    background: black;
+  }
 
-.header{
-  padding-top: 20px;
-}
+  .header {
+    padding-top: 20px;
+  }
+
+  .cards-two {
+    padding-left: 330px;
+
+  }
 </style>
