--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title></title>
-
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
@@ -23,7 +22,36 @@
             </div>
           </nav>
 
-          
+        <div class=”Cart-Container”></div>
+
 
     </body>
 </html>
+
+<style>
+body{
+ margin: 0;
+ padding: 0;
+ background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF);
+ height: 100vh;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.Cart-Container{
+ width: 70%;
+ height: 85%;
+ background-color: #ffffff;
+ border-radius: 20px;
+ box-shadow: 0px 25px 40px #1687d933;
+}
+
+
+
+
+
+
+
+
+
+</style>
