--- a/about-us.html
+++ b/about-us.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>About Us!</title>
 <link rel="stylesheet" href="about-us.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
+
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:rgb(39, 40, 56) ;">
             <div class="container-fluid">
@@ -28,9 +29,9 @@
 <h1>About Us!</h1>
 <i><p>Good food for Good Moments!</p></i>
 </div>
-
+<br>
 <div class="paragraph-section">
-<p> Dynamic Creators was founded in 2022 of August.<br> We are a small food delivery service that provides a variety of food choices. We started this business for people that's trying to start a healthier diet , are too busy to cook and want something fast and tasty.<br> We believe that using the freshest ingredients produces the best results for our customers.  We offer vegan , vegetarian , gluten free and many more food options.
+<p> Dynamic Creators was founded in 2022 of August. We are a small food delivery service that provides a variety of food choices. We started this business for people that's trying to start a healthier diet , are too busy to cook and want something fast and tasty.<br> We believe that using the freshest ingredients produces the best results for our customers.  We offer vegan , vegetarian , gluten free and many more food options.
 
 
 </p>
