--- a/about-us.html
+++ b/about-us.html
@@ -39,7 +39,7 @@
             </div>
 <div class="header-section">
             <i><h1>Our Mission</h1></i>
-            <p></p>
+            <p>To provide a healthy, tasty, and refreshing experience with our freshest ingredients</p>
 </div>
             
             
