--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -17,6 +17,7 @@
                   <a class="nav-link" href="about-us.html">About Us</a>
                   <a class="nav-link active" href="pricing.html">Pricing</a>
                   <a class="nav-link" href="meet-our-founders.html">Meet Our Founders</a>
+                <img src="">
                 </div>
               </div>
             </div>
