added new stuff

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="meet-our-founders.html">Meet Our Founders</a>
         </div>
       </div>
-    </div>
+    </div>git
   </nav>
 
   <div class="top-section">
