--- a/meet-our-founders.html
+++ b/meet-our-founders.html
@@ -41,8 +41,7 @@
           <img src="aaliyah.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">This is Aaliyah</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <p class="card-text">Aaliyah is 23 years old, she is currently not attending school , but is planning to go back to pursue her degree in Computer Science. In the near future she would like to take a career as a Web Designer.<br><i>Fun Fact:</i> Aaliyah is a cat lover.  </p>
           </div>
         </div>
       </div>
@@ -52,8 +51,8 @@
           <div class="card-body">
             <h5 class="card-title">This is Jasmeir</h5>
             <p class="card-text">She's 16 years old. She attends River Rouge High School and a part of the class of
-              2024.She's currently learning development technology such as HTML and CSS. A fun fact about Jasmier is
-              she's a cheerleader at River Rouge High School. </p>
+              2024.She's currently learning development technology such as HTML and CSS. <br><i>Fun Fact:</i> Jasmier is
+               a cheerleader at River Rouge High School. </p>
           </div>
         </div>
       </div>
@@ -78,8 +77,8 @@
           <div class="card-body">
             <h5 class="card-title">This is Lanihya</h5>
             <p class="card-text">She grew up being taught to always help those who are less fortunate. She's known to
-              put others before herself and she's always uplifting both her friends and family. Fun Fact about Lanihya
-              is that she fed the homeless on Thanksgiving in 2019.</p>
+              put others before herself and she's always uplifting both her friends and family.<br><i>Fun Fact:</i> Lanihya
+              fed the homeless on Thanksgiving in 2019.</p>
           </div>
         </div>
       </div>
