--- a/meet-our-founders.html
+++ b/meet-our-founders.html
@@ -61,8 +61,9 @@
           <img src="kylee.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">This is Kylee</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
+            <p class="card-text">She is 17 years old, right now she is a rising senior and is apart of class of 2022 
+              , after graduating she wants to attend college for mortuary science.<br><i>Fun Fact:</i> Kylee loves authentic mexican food.
+            </p>
           </div>
         </div>
       </div>
