--- a/meet-our-founders.html
+++ b/meet-our-founders.html
@@ -45,6 +45,7 @@
           </div>
         </div>
       </div>
+
       <div class="col">
         <div class="card h-100">
           <img src="jasmeir.jpg" class="card-img-top" alt="...">
@@ -56,6 +57,7 @@
           </div>
         </div>
       </div>
+
       <div class="col">
         <div class="card h-100">
           <img src="kylee.jpg" class="card-img-top" alt="...">
@@ -84,6 +86,23 @@
         </div>
       </div>
       
+
+      <div class="cards-three">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="terrence.jpg" class="card-img-top" style="width:450px;" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">This is Terrence</h5>
+                <p class="card-text">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
 
 
 </body>
