--- a/meet-our-founders.html
+++ b/meet-our-founders.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title></title>
+  <title>Our Founders</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:rgb(39, 40, 56) ;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="homepage.html"><img src="company-logo.png" style="width:130px"></a>
+      <a class="navbar-brand" href="homepage.html"> <img src="company-logo.png" style="width:130px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -87,14 +87,14 @@
       </div>
       
 
-      <div class="cards-three">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="cards">
+        <div class="">
           <div class="col">
             <div class="card h-100">
               <img src="terrence.jpg" class="card-img-top" style="width:450px;" alt="...">
               <div class="card-body">
                 <h5 class="card-title">This is Terrence</h5>
-                <p class="card-text">
+                <p class="card-text"> Terrence is 17 years old , and he is a future boxing champion. <i>Fun Fact:</i> Jasmine haven't given him his watermelon.
 
                 </p>
               </div>
